multiple udb instances - one for each db, new modelling classes, ...