@@ -7,9 +7,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -24,12 +24,14 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.Marker;
 import org.slf4j.MarkerFactory;
-import org.teamapps.universaldb.index.*;
+import org.teamapps.universaldb.index.DatabaseIndex;
+import org.teamapps.universaldb.index.FieldIndex;
+import org.teamapps.universaldb.index.IndexType;
+import org.teamapps.universaldb.index.TableIndex;
 import org.teamapps.universaldb.index.file.FileIndex;
 import org.teamapps.universaldb.index.file.FileStore;
 import org.teamapps.universaldb.index.file.FileValue;
 import org.teamapps.universaldb.index.file.LocalFileStore;
-import org.teamapps.universaldb.index.log.LogIterator;
 import org.teamapps.universaldb.index.reference.CyclicReferenceUpdate;
 import org.teamapps.universaldb.index.reference.multi.MultiReferenceIndex;
 import org.teamapps.universaldb.index.reference.single.SingleReferenceIndex;
@@ -48,14 +50,14 @@ import org.teamapps.universaldb.index.transaction.resolved.ResolvedTransactionRe
 import org.teamapps.universaldb.index.transaction.resolved.ResolvedTransactionRecordType;
 import org.teamapps.universaldb.index.transaction.resolved.ResolvedTransactionRecordValue;
 import org.teamapps.universaldb.index.translation.TranslatableText;
-import org.teamapps.universaldb.pojo.AbstractUdbEntity;
-import org.teamapps.universaldb.schema.Database;
-import org.teamapps.universaldb.schema.Schema;
-import org.teamapps.universaldb.schema.SchemaInfoProvider;
+import org.teamapps.universaldb.model.DatabaseModel;
+import org.teamapps.universaldb.model.TableModel;
+import org.teamapps.universaldb.schema.ModelProvider;
 import org.teamapps.universaldb.schema.Table;
 import org.teamapps.universaldb.update.RecordUpdateEvent;
 
-import java.io.*;
+import java.io.File;
+import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Method;
 import java.util.BitSet;
@@ -65,29 +67,63 @@ import java.util.Map;
 import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Collectors;
 
-public class UniversalDB implements DataBaseMapper {
+public class UniversalDB {
 	public static final Marker SKIP_DB_LOGGING = MarkerFactory.getMarker("SKIP_DB_LOGGING");
 
 	private static final Logger logger = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 	private static final ThreadLocal<Integer> THREAD_LOCAL_USER_ID = ThreadLocal.withInitial(() -> 0);
 
-	private final File storagePath;
-	private final SchemaIndex schemaIndex;
-	private TransactionIndex transactionIndex;
+	private final DatabaseIndex databaseIndex;
 
-	private final Map<Integer, DatabaseIndex> databaseById = new HashMap<>();
+	private final File storagePath;
 	private final Map<Integer, TableIndex> tableById = new HashMap<>();
-	private final Map<Integer, ColumnIndex> columnById = new HashMap<>();
+	private final Map<Integer, FieldIndex> columnById = new HashMap<>();
 	private final Map<TableIndex, Class> entityClassByTableIndex = new HashMap<>();
 	private final Map<TableIndex, Class> queryClassByTableIndex = new HashMap<>();
-	private final Map<String, TableIndex> tableIndexByPath = new HashMap<>();
-
 	private final ArrayBlockingQueue<RecordUpdateEvent> updateEventQueue = new ArrayBlockingQueue<>(25_000);
 	private final Map<Long, CompletableFuture<ResolvedTransaction>> transactionCompletableFutureMap = new ConcurrentHashMap<>();
-	private volatile boolean active = true;
+	private TransactionIndex transactionIndex;
+
+	private UniversalDB(File storagePath, ModelProvider modelProvider, FileStore fileStore) throws Exception {
+		this.storagePath = storagePath;
+		this.transactionIndex = new TransactionIndex(storagePath);
+		createShutdownHook();
+
+
+		DatabaseModel databaseModel = modelProvider.getModel();
+		if (!databaseModel.isValid()) {
+			throw new RuntimeException("Error invalid database model:" + databaseModel.getName());
+		}
+		databaseIndex = new DatabaseIndex(databaseModel, storagePath);
+
+		//todo file store !!!
+		//databaseIndex.setFileStore(fileStore);
+
+
+		//mapSchema(databaseModel);
+
+		if (!transactionIndex.isValidSchema(databaseModel)) {
+			throw new RuntimeException("Cannot load incompatible model. Current model is:\n" + transactionIndex.getCurrentModel() + "\nNew model is:\n" + databaseModel);
+		}
+		if (transactionIndex.isModelUpdate(databaseModel)) {
+			TransactionRequest modelUpdateTransactionRequest = createModelUpdateTransactionRequest(databaseModel);
+			executeTransaction(modelUpdateTransactionRequest);
+		} else {
+			databaseIndex.merge(transactionIndex.getCurrentModel(), true, this);
+			for (TableIndex table : databaseIndex.getTables()) {
+				tableById.put(table.getMappingId(), table);
+				for (FieldIndex fieldIndex : table.getFieldIndices()) {
+					columnById.put(fieldIndex.getMappingId(), fieldIndex);
+				}
+			}
+		}
+
+		//todo class loader - if loaded from app server
+		installLocalTableClasses(transactionIndex.getCurrentModel(), UniversalDB.class.getClassLoader());
+		UniversalDbRegistry.getInstance().registerDatabase(databaseModel.getName(), this, UniversalDB.class.getClassLoader());
+	}
 
 	public static int getUserId() {
 		return THREAD_LOCAL_USER_ID.get();
@@ -97,61 +133,44 @@ public class UniversalDB implements DataBaseMapper {
 		THREAD_LOCAL_USER_ID.set(userId);
 	}
 
-	public static UniversalDB createStandalone(File storagePath, SchemaInfoProvider schemaInfoProvider) throws Exception {
+	public static UniversalDB createStandalone(File storagePath, ModelProvider modelProvider) throws Exception {
 		LocalFileStore fileStore = new LocalFileStore(new File(storagePath, "file-store"));
-		return new UniversalDB(storagePath, schemaInfoProvider, fileStore);
+		return new UniversalDB(storagePath, modelProvider, fileStore);
 	}
 
-	public static UniversalDB createStandalone(File storagePath, File fileStorePath, SchemaInfoProvider schemaInfoProvider) throws Exception {
+	public static UniversalDB createStandalone(File storagePath, File fileStorePath, ModelProvider modelProvider) throws Exception {
 		LocalFileStore fileStore = new LocalFileStore(fileStorePath);
-		return new UniversalDB(storagePath, schemaInfoProvider, fileStore);
+		return new UniversalDB(storagePath, modelProvider, fileStore);
 	}
 
-	public static UniversalDB createStandalone(File storagePath, SchemaInfoProvider schemaInfoProvider, FileStore fileStore) throws Exception {
-		return new UniversalDB(storagePath, schemaInfoProvider, fileStore);
+	public static UniversalDB createStandalone(File storagePath, ModelProvider modelProvider, FileStore fileStore) throws Exception {
+		return new UniversalDB(storagePath, modelProvider, fileStore);
 	}
 
-	private UniversalDB(File storagePath, SchemaInfoProvider schemaInfo, FileStore fileStore) throws Exception {
-		AbstractUdbEntity.setDatabase(this);
-		this.storagePath = storagePath;
-		this.transactionIndex = new TransactionIndex(storagePath);
-		createShutdownHook();
-
-
-		Schema schema = schemaInfo.getSchema();
-		this.schemaIndex = new SchemaIndex(schema, storagePath);
-		this.schemaIndex.setFileStore(fileStore);
-		mapSchema(schema, true);
-
-		installTableClasses(transactionIndex.getCurrentSchema(), UniversalDB.class.getClassLoader(), false);
-	}
-
-	public UniversalDB(File storagePath, LogIterator logIterator) throws Exception {
-		AbstractUdbEntity.setDatabase(this);
-		this.storagePath = storagePath;
-		this.transactionIndex = new TransactionIndex(storagePath);
-		LocalFileStore fileStore = new LocalFileStore(new File(storagePath, "file-store"));
-		createShutdownHook();
-
-		Schema schema = new Schema();
-		this.schemaIndex = new SchemaIndex(schema, storagePath);
-		this.schemaIndex.setFileStore(fileStore);
-
-		long time = System.currentTimeMillis();
-		long count = 0;
-		while (logIterator.hasNext()) {
-			byte[] bytes = logIterator.next();
-			ResolvedTransaction transaction = ResolvedTransaction.createResolvedTransaction(bytes);
-			handleTransaction(transaction);
-			count++;
-		}
-		logger.info("Imported " + count + " transactions in: " + (System.currentTimeMillis() - time));
-	}
+//	public UniversalDB(File storagePath, LogIterator logIterator) throws Exception {
+//		this.storagePath = storagePath;
+//		this.transactionIndex = new TransactionIndex(storagePath);
+//		LocalFileStore fileStore = new LocalFileStore(new File(storagePath, "file-store"));
+//		createShutdownHook();
+//
+//		Schema schema = new Schema();
+//		this.schemaIndex = new SchemaIndex(schema, storagePath);
+//		this.schemaIndex.setFileStore(fileStore);
+//
+//		long time = System.currentTimeMillis();
+//		long count = 0;
+//		while (logIterator.hasNext()) {
+//			byte[] bytes = logIterator.next();
+//			ResolvedTransaction transaction = ResolvedTransaction.createResolvedTransaction(bytes);
+//			handleTransaction(transaction);
+//			count++;
+//		}
+//		logger.info("Imported " + count + " transactions in: " + (System.currentTimeMillis() - time));
+//	}
 
 	private void createShutdownHook() {
 		Runtime.getRuntime().addShutdownHook(new Thread(() -> {
 			try {
-				active = false;
 				logger.info(SKIP_DB_LOGGING, "SHUTTING DOWN DATABASE");
 			} catch (Exception e) {
 				e.printStackTrace();
@@ -159,72 +178,62 @@ public class UniversalDB implements DataBaseMapper {
 		}));
 	}
 
-	private void mapSchema(Schema schema, boolean executeAsTransaction) {
-		if (!transactionIndex.isValidSchema(schema)) {
-			throw new RuntimeException("Cannot load incompatible schema. Current schema is:\n" + transactionIndex.getCurrentSchema() + "\nNew schema is:\n" + schema);
-		}
-		if (executeAsTransaction && transactionIndex.isSchemaUpdate(schema)) {
-			TransactionRequest modelUpdateTransactionRequest = createModelUpdateTransactionRequest(schema);
-			executeTransaction(modelUpdateTransactionRequest);
-		} else {
-			schemaIndex.merge(transactionIndex.getCurrentSchema(), true, this);
-			for (DatabaseIndex database : schemaIndex.getDatabases()) {
-				databaseById.put(database.getMappingId(), database);
-				for (TableIndex table : database.getTables()) {
-					tableById.put(table.getMappingId(), table);
-					for (ColumnIndex columnIndex : table.getColumnIndices()) {
-						columnById.put(columnIndex.getMappingId(), columnIndex);
-					}
-				}
-			}
+//	private void mapSchema(DatabaseModel model) {
+//
+//	}
+
+	private void installLocalTableClasses(DatabaseModel databaseModel, ClassLoader classLoader) throws Exception {
+		for (TableModel tableModel : databaseModel.getLocalTables()) {
+			TableIndex tableIndex = databaseIndex.getTable(tableModel.getName());
+			installTablePojos(classLoader, databaseModel.getFullNameSpace(), tableModel, tableIndex);
 		}
 	}
 
-	private void installTableClasses(Schema schema, ClassLoader classLoader, boolean allSchemaTablesAreMandatory) throws Exception {
-		String pojoPath = schema.getPojoNamespace();
-		for (Database database : schema.getDatabases()) {
-			String path = pojoPath + "." + database.getName().toLowerCase();
-			for (Table table : database.getAllTables()) {
-				TableIndex tableIndex = table.isView() ? schemaIndex.getTableByPath(table.getReferencedTablePath()) : schemaIndex.getTable(table);
-				String tableName = table.getName();
-				try {
-					String className = path + ".Udb" + tableName.substring(0, 1).toUpperCase() + tableName.substring(1);
-					Class<?> schemaClass = Class.forName(className, true, classLoader);
-					Method method = schemaClass.getDeclaredMethod("setTableIndex", TableIndex.class);
-					method.setAccessible(true);
-					method.invoke(null, tableIndex);
-
-					if (!table.isView()) {
-						entityClassByTableIndex.put(tableIndex, schemaClass);
-						tableIndexByPath.put(tableIndex.getFQN(), tableIndex);
-						String queryClassName = path + ".Udb" + tableName.substring(0, 1).toUpperCase() + tableName.substring(1) + "Query";
-						Class<?> queryClass = Class.forName(queryClassName, true, classLoader);
-						queryClassByTableIndex.put(tableIndex, queryClass);
-					}
-				} catch (ClassNotFoundException e) {
-					if (allSchemaTablesAreMandatory) {
-						throw e;
-					} else {
-						logger.info("Could not load entity class for tableIndex:" + tableIndex.getFQN());
-					}
-				} catch (Exception e) {
-					throw e;
-				}
+	public void installRemoteTableClasses(ClassLoader classLoader) {
+		try {
+			DatabaseModel currentModel = transactionIndex.getCurrentModel();
+			for (TableModel remoteTable : currentModel.getRemoteTables()) {
+				UniversalDB remoteDb = UniversalDbRegistry.getInstance().getDatabase(remoteTable.getRemoteDatabase());
+				TableIndex tableIndex = remoteDb.getDatabaseIndex().getTable(remoteTable.getName());
+				installTablePojos(classLoader, currentModel.getFullNameSpace(), remoteTable, tableIndex);
 			}
+		} catch (Exception e) {
+			throw new RuntimeException(e);
 		}
 	}
 
-	public void addAuxiliaryModel(SchemaInfoProvider schemaInfo, ClassLoader classLoader) throws Exception {
-		Schema schema = schemaInfo.getSchema();
-		if (!transactionIndex.isValidSchema(schema)) {
-			throw new RuntimeException("Cannot load incompatible schema. Current schema is:\n" + transactionIndex.getCurrentSchema() + "\nNew schema is:\n" + schema);
-		}
+	private void installTablePojos(ClassLoader classLoader, String fullNamespace, TableModel tableModel, TableIndex tableIndex) throws Exception {
+		String tableName = tableModel.getName();
+		try {
+			String className = fullNamespace + ".Udb" + tableName.substring(0, 1).toUpperCase() + tableName.substring(1);
+			Class<?> schemaClass = Class.forName(className, true, classLoader);
+			Method method = schemaClass.getDeclaredMethod("setTableIndex", TableIndex.class, UniversalDB.class);
+			method.setAccessible(true);
+			method.invoke(null, tableIndex, this);
 
-		if (transactionIndex.isSchemaUpdate(schema)) {
-			TransactionRequest modelUpdateTransactionRequest = createModelUpdateTransactionRequest(schema);
+//			if (!tableModel.isRemoteTable()) {
+				entityClassByTableIndex.put(tableIndex, schemaClass);
+				String queryClassName = fullNamespace + ".Udb" + tableName.substring(0, 1).toUpperCase() + tableName.substring(1) + "Query";
+				Class<?> queryClass = Class.forName(queryClassName, true, classLoader);
+				queryClassByTableIndex.put(tableIndex, queryClass);
+//			}
+		} catch (ClassNotFoundException e) {
+			throw new RuntimeException("Could not load entity class for tableIndex:" + tableIndex.getFQN());
+		} catch (Exception e) {
+			throw e;
+		}
+	}
+
+	public void installModelUpdate(ModelProvider modelProvider, ClassLoader classLoader) throws Exception {
+		DatabaseModel model = modelProvider.getModel();
+		if (!transactionIndex.isValidSchema(model)) {
+			throw new RuntimeException("Cannot load incompatible model. Current model is:\n" + transactionIndex.getCurrentModel() + "\nNew model is:\n" + model);
+		}
+		if (transactionIndex.isModelUpdate(model)) {
+			TransactionRequest modelUpdateTransactionRequest = createModelUpdateTransactionRequest(model);
 			executeTransaction(modelUpdateTransactionRequest);
 		}
-		installTableClasses(schema, classLoader, true);
+		installLocalTableClasses(model, classLoader);
 	}
 
 	public Class getEntityClass(TableIndex tableIndex) {
@@ -235,16 +244,12 @@ public class UniversalDB implements DataBaseMapper {
 		return queryClassByTableIndex.get(tableIndex);
 	}
 
-	public TableIndex getTableIndexByPath(String path) {
-		return tableIndexByPath.get(path);
-	}
-
 	public synchronized TransactionRequest createTransactionRequest() {
 		return new TransactionRequest(transactionIndex.getNodeId(), transactionIndex.createTransactionRequestId(), getUserId());
 	}
 
-	public synchronized TransactionRequest createModelUpdateTransactionRequest(Schema schema) {
-		return new TransactionRequest(transactionIndex.getNodeId(), transactionIndex.createTransactionRequestId(), getUserId(), schema);
+	public synchronized TransactionRequest createModelUpdateTransactionRequest(DatabaseModel databaseModel) {
+		return new TransactionRequest(transactionIndex.getNodeId(), transactionIndex.createTransactionRequestId(), getUserId(), databaseModel);
 	}
 
 
@@ -264,13 +269,12 @@ public class UniversalDB implements DataBaseMapper {
 		}
 	}
 
-	private void writeInitialTransaction(TableIndex tableIndex, int id, boolean deleted) throws Exception {
-		int recordId = id;
+	private void writeInitialTransaction(TableIndex tableIndex, int recordId, boolean deleted) throws Exception {
 		ResolvedTransaction transaction = createInitialTransaction(tableIndex, recordId, false);
 		ResolvedTransactionRecord record = new ResolvedTransactionRecord(ResolvedTransactionRecordType.CREATE_WITH_ID, tableIndex.getMappingId(), recordId);
 		transaction.addTransactionRecord(record);
-		List<ColumnIndex> columnIndices = tableIndex.getColumnIndices().stream().filter(col -> !col.isEmpty(recordId)).collect(Collectors.toList());
-		for (ColumnIndex column : columnIndices) {
+		List<FieldIndex> columnIndices = tableIndex.getFieldIndices().stream().filter(col -> !col.isEmpty(recordId)).toList();
+		for (FieldIndex column : columnIndices) {
 			ResolvedTransactionRecordValue recordValue = createInitialTransactionRecordValue(column, recordId);
 			record.addRecordValue(recordValue);
 		}
@@ -280,8 +284,8 @@ public class UniversalDB implements DataBaseMapper {
 			transaction = createInitialTransaction(tableIndex, recordId, true);
 			record = new ResolvedTransactionRecord(ResolvedTransactionRecordType.DELETE, tableIndex.getMappingId(), recordId);
 			transaction.addTransactionRecord(record);
-			record.addRecordValue(createInitialTransactionRecordValue(tableIndex.getColumnIndex(Table.FIELD_DELETION_DATE), recordId));
-			record.addRecordValue(createInitialTransactionRecordValue(tableIndex.getColumnIndex(Table.FIELD_DELETED_BY), recordId));
+			record.addRecordValue(createInitialTransactionRecordValue(tableIndex.getFieldIndex(Table.FIELD_DELETION_DATE), recordId));
+			record.addRecordValue(createInitialTransactionRecordValue(tableIndex.getFieldIndex(Table.FIELD_DELETED_BY), recordId));
 			tableIndex.getRecordVersioningIndex().writeRecordUpdate(transaction, record);
 			transactionIndex.writeTransaction(transaction);
 		}
@@ -291,8 +295,8 @@ public class UniversalDB implements DataBaseMapper {
 		long transactionId = transactionIndex.getLastTransactionId() + 1;
 		int userId = 0;
 		int timestamp = 0;
-		ColumnIndex dateColumn = tableIndex.getColumnIndex(deleted ? Table.FIELD_DELETION_DATE : Table.FIELD_CREATION_DATE);
-		ColumnIndex userRefColumn = tableIndex.getColumnIndex(deleted ? Table.FIELD_DELETED_BY : Table.FIELD_CREATED_BY);
+		FieldIndex dateColumn = tableIndex.getFieldIndex(deleted ? Table.FIELD_DELETION_DATE : Table.FIELD_CREATION_DATE);
+		FieldIndex userRefColumn = tableIndex.getFieldIndex(deleted ? Table.FIELD_DELETED_BY : Table.FIELD_CREATED_BY);
 		if (dateColumn != null && userRefColumn != null) {
 			userId = (int) userRefColumn.getGenericValue(recordId);
 			timestamp = (int) dateColumn.getGenericValue(recordId);
@@ -300,7 +304,7 @@ public class UniversalDB implements DataBaseMapper {
 		return new ResolvedTransaction(transactionIndex.getNodeId(), transactionIndex.createTransactionRequestId(), transactionId, userId, timestamp * 1_000L);
 	}
 
-	private ResolvedTransactionRecordValue createInitialTransactionRecordValue(ColumnIndex column, int recordId) {
+	private ResolvedTransactionRecordValue createInitialTransactionRecordValue(FieldIndex column, int recordId) {
 		switch (column.getType()) {
 			case BOOLEAN:
 			case SHORT:
@@ -375,34 +379,30 @@ public class UniversalDB implements DataBaseMapper {
 	}
 
 	private void handleModelUpdateRequest(TransactionRequest request, ResolvedTransaction resolvedTransaction) throws Exception {
-		Schema schema = request.getSchema();
-		if (!transactionIndex.isValidSchema(schema)) {
-			throw new RuntimeException("Cannot update incompatible schema. Current schema is:\n" + transactionIndex.getCurrentSchema() + "\nNew schema is:\n" + schema);
+		DatabaseModel model = request.getDatabaseModel();
+		if (!transactionIndex.isValidSchema(model)) {
+			throw new RuntimeException("Cannot update incompatible model. Current model is:\n" + transactionIndex.getCurrentModel() + "\nNew model is:\n" + model);
 		}
 
-		Schema localSchema = transactionIndex.getCurrentSchema();
-		if (localSchema != null) {
-			localSchema.merge(schema);
+		DatabaseModel currentModel = transactionIndex.getCurrentModel();
+		if (currentModel != null) {
+			currentModel.mergeModel(model);
 		} else {
-			localSchema = schema;
+			currentModel = model;
 		}
-		localSchema.mapSchema();
-		resolvedTransaction.setSchema(localSchema);
+		currentModel.initialize();
+		resolvedTransaction.setDatabaseModel(currentModel);
 		transactionIndex.writeTransaction(resolvedTransaction);
 
-		transactionIndex.writeSchemaUpdate(resolvedTransaction.getSchemaUpdate());
-		schemaIndex.merge(localSchema, true, this);
+		transactionIndex.writeModelUpdate(resolvedTransaction.getModelUpdate());
+		databaseIndex.merge(currentModel, true, this);
 
-		for (DatabaseIndex database : schemaIndex.getDatabases()) {
-			databaseById.put(database.getMappingId(), database);
-			for (TableIndex table : database.getTables()) {
-				tableById.put(table.getMappingId(), table);
-				for (ColumnIndex columnIndex : table.getColumnIndices()) {
-					columnById.put(columnIndex.getMappingId(), columnIndex);
-				}
+		for (TableIndex table : databaseIndex.getTables()) {
+			tableById.put(table.getMappingId(), table);
+			for (FieldIndex fieldIndex : table.getFieldIndices()) {
+				columnById.put(fieldIndex.getMappingId(), fieldIndex);
 			}
 		}
-
 	}
 
 	private void handleDataUpdateRequest(TransactionRequest request, ResolvedTransaction resolvedTransaction) throws Exception {
@@ -428,9 +428,7 @@ public class UniversalDB implements DataBaseMapper {
 			resolvedTransaction.addTransactionRecord(resolvedRecord);
 
 			switch (record.getRecordType()) {
-				case CREATE:
-				case CREATE_WITH_ID:
-				case UPDATE:
+				case CREATE, CREATE_WITH_ID, UPDATE -> {
 					for (TransactionRequestRecordValue recordValue : record.getRecordValues()) {
 						List<CyclicReferenceUpdate> cyclicReferenceUpdates = persistColumnValueUpdates(recordId, recordValue, request.getRecordIdByCorrelationId(), resolvedRecord);
 						if (cyclicReferenceUpdates != null && !cyclicReferenceUpdates.isEmpty()) {
@@ -449,8 +447,8 @@ public class UniversalDB implements DataBaseMapper {
 					if (!fullTextIndexValues.isEmpty()) {
 						tableIndex.updateFullTextIndex(recordId, fullTextIndexValues, record.getRecordType() == TransactionRequestRecordType.UPDATE);
 					}
-					break;
-				case DELETE:
+				}
+				case DELETE -> {
 					List<CyclicReferenceUpdate> cyclicReferenceUpdates = tableIndex.deleteRecord(record.getRecordId());
 					for (TransactionRequestRecordValue recordValue : record.getRecordValues()) {
 						persistColumnValueUpdates(recordId, recordValue, request.getRecordIdByCorrelationId(), resolvedRecord);
@@ -460,8 +458,8 @@ public class UniversalDB implements DataBaseMapper {
 							resolvedTransaction.addTransactionRecord(ResolvedTransactionRecord.createCyclicRecord(referenceUpdate));
 						}
 					}
-					break;
-				case RESTORE:
+				}
+				case RESTORE -> {
 					List<CyclicReferenceUpdate> cyclicReferenceUpdates2 = tableIndex.restoreRecord(record.getRecordId());
 					for (TransactionRequestRecordValue recordValue : record.getRecordValues()) {
 						persistColumnValueUpdates(recordId, recordValue, request.getRecordIdByCorrelationId(), resolvedRecord);
@@ -471,7 +469,7 @@ public class UniversalDB implements DataBaseMapper {
 							resolvedTransaction.addTransactionRecord(ResolvedTransactionRecord.createCyclicRecord(referenceUpdate));
 						}
 					}
-					break;
+				}
 			}
 			addRecordUpdateEvent(resolvedRecord, resolvedTransaction.getUserId());
 		}
@@ -493,26 +491,22 @@ public class UniversalDB implements DataBaseMapper {
 	}
 
 	private void handleModelUpdateTransaction(ResolvedTransaction transaction) throws Exception {
-		Schema schema = transaction.getSchema();
-		Schema localSchema = transactionIndex.getCurrentSchema();
-		if (localSchema != null) {
-			localSchema.merge(schema);
+		DatabaseModel model = transaction.getDatabaseModel();
+		DatabaseModel currentModel = transactionIndex.getCurrentModel();
+		if (currentModel != null) {
+			currentModel.mergeModel(model);
 		} else {
-			localSchema = schema;
+			currentModel = model;
 		}
-		localSchema.mapSchema();
+		currentModel.initialize();
 		transactionIndex.writeTransaction(transaction);
 
-		transactionIndex.writeSchemaUpdate(transaction.getSchemaUpdate());
-		schemaIndex.merge(localSchema, true, this);
-
-		for (DatabaseIndex database : schemaIndex.getDatabases()) {
-			databaseById.put(database.getMappingId(), database);
-			for (TableIndex table : database.getTables()) {
-				tableById.put(table.getMappingId(), table);
-				for (ColumnIndex columnIndex : table.getColumnIndices()) {
-					columnById.put(columnIndex.getMappingId(), columnIndex);
-				}
+		transactionIndex.writeModelUpdate(transaction.getModelUpdate());
+		databaseIndex.merge(currentModel, true, this);
+		for (TableIndex table : databaseIndex.getTables()) {
+			tableById.put(table.getMappingId(), table);
+			for (FieldIndex fieldIndex : table.getFieldIndices()) {
+				columnById.put(fieldIndex.getMappingId(), fieldIndex);
 			}
 		}
 	}
@@ -522,9 +516,7 @@ public class UniversalDB implements DataBaseMapper {
 			TableIndex tableIndex = getTableIndexById(record.getTableId());
 
 			switch (record.getRecordType()) {
-				case CREATE:
-				case CREATE_WITH_ID:
-				case UPDATE:
+				case CREATE, CREATE_WITH_ID, UPDATE -> {
 					if (record.getRecordType() == ResolvedTransactionRecordType.CREATE || record.getRecordType() == ResolvedTransactionRecordType.CREATE_WITH_ID) {
 						tableIndex.createRecord(record.getRecordId());
 					}
@@ -541,23 +533,23 @@ public class UniversalDB implements DataBaseMapper {
 					if (!fullTextIndexValues.isEmpty()) {
 						tableIndex.updateFullTextIndex(record.getRecordId(), fullTextIndexValues, record.getRecordType() == ResolvedTransactionRecordType.UPDATE);
 					}
-					break;
-				case DELETE:
+				}
+				case DELETE -> {
 					tableIndex.deleteRecord(record.getRecordId());
 					for (ResolvedTransactionRecordValue recordValue : record.getRecordValues()) {
 						persistColumnValueUpdates(record.getRecordId(), recordValue);
 					}
-					break;
-				case RESTORE:
+				}
+				case RESTORE -> {
 					tableIndex.restoreRecord(record.getRecordId());
 					for (ResolvedTransactionRecordValue recordValue : record.getRecordValues()) {
 						persistColumnValueUpdates(record.getRecordId(), recordValue);
 					}
-					break;
-				case ADD_CYCLIC_REFERENCE:
-					break;
-				case REMOVE_CYCLIC_REFERENCE:
-					break;
+				}
+//				case ADD_CYCLIC_REFERENCE:
+//					break;
+//				case REMOVE_CYCLIC_REFERENCE:
+//					break;
 			}
 			addRecordUpdateEvent(record, transaction.getUserId());
 		}
@@ -570,17 +562,17 @@ public class UniversalDB implements DataBaseMapper {
 	}
 
 	private List<CyclicReferenceUpdate> persistColumnValueUpdates(int recordId, TransactionRequestRecordValue recordValue, Map<Integer, Integer> recordIdByCorrelationId, ResolvedTransactionRecord resolvedRecord) {
-		ColumnIndex column = getColumnById(recordValue.getColumnId());
+		FieldIndex fieldIndex = getColumnById(recordValue.getColumnId());
 		Object value = recordValue.getValue();
-		if (column.getType() == IndexType.MULTI_REFERENCE) {
-			MultiReferenceIndex multiReferenceIndex = (MultiReferenceIndex) column;
+		if (fieldIndex.getType() == IndexType.MULTI_REFERENCE) {
+			MultiReferenceIndex multiReferenceIndex = (MultiReferenceIndex) fieldIndex;
 			MultiReferenceEditValue editValue = (MultiReferenceEditValue) value;
 			editValue.updateReferences(recordIdByCorrelationId);
 			ResolvedMultiReferenceUpdate resolvedUpdateValue = editValue.getResolvedUpdateValue();
 			resolvedRecord.addRecordValue(new ResolvedTransactionRecordValue(recordValue.getColumnId(), recordValue.getIndexType(), resolvedUpdateValue));
 			return multiReferenceIndex.setReferenceEditValue(recordId, editValue);
-		} else if (column.getType() == IndexType.REFERENCE) {
-			SingleReferenceIndex singleReferenceIndex = (SingleReferenceIndex) column;
+		} else if (fieldIndex.getType() == IndexType.REFERENCE) {
+			SingleReferenceIndex singleReferenceIndex = (SingleReferenceIndex) fieldIndex;
 			if (value != null) {
 				RecordReference recordReference = (RecordReference) value;
 				recordReference.updateReference(recordIdByCorrelationId);
@@ -591,21 +583,21 @@ public class UniversalDB implements DataBaseMapper {
 				return singleReferenceIndex.setReferenceValue(recordId, null);
 			}
 		} else {
-			column.setGenericValue(recordId, value);
+			fieldIndex.setGenericValue(recordId, value);
 			resolvedRecord.addRecordValue(new ResolvedTransactionRecordValue(recordValue.getColumnId(), recordValue.getIndexType(), value));
 		}
 		return null;
 	}
 
 	private void persistColumnValueUpdates(int recordId, ResolvedTransactionRecordValue recordValue) {
-		ColumnIndex column = getColumnById(recordValue.getColumnId());
+		FieldIndex fieldIndex = getColumnById(recordValue.getColumnId());
 		Object value = recordValue.getValue();
-		if (column.getType() == IndexType.MULTI_REFERENCE) {
-			MultiReferenceIndex multiReferenceIndex = (MultiReferenceIndex) column;
+		if (fieldIndex.getType() == IndexType.MULTI_REFERENCE) {
+			MultiReferenceIndex multiReferenceIndex = (MultiReferenceIndex) fieldIndex;
 			ResolvedMultiReferenceUpdate multiReferenceUpdate = (ResolvedMultiReferenceUpdate) value;
 			multiReferenceIndex.setResolvedReferenceEditValue(recordId, multiReferenceUpdate);
-		} else if (column.getType() == IndexType.REFERENCE) {
-			SingleReferenceIndex singleReferenceIndex = (SingleReferenceIndex) column;
+		} else if (fieldIndex.getType() == IndexType.REFERENCE) {
+			SingleReferenceIndex singleReferenceIndex = (SingleReferenceIndex) fieldIndex;
 			if (value != null) {
 				int referencedRecordId = (int) value;
 				singleReferenceIndex.setValue(recordId, referencedRecordId, false);
@@ -613,26 +605,23 @@ public class UniversalDB implements DataBaseMapper {
 				singleReferenceIndex.setValue(recordId, 0, false);
 			}
 		} else {
-			column.setGenericValue(recordId, value);
+			fieldIndex.setGenericValue(recordId, value);
 		}
 	}
 
 	public void createDatabaseDump(File dumpFolder) throws IOException {
-		for (DatabaseIndex database : schemaIndex.getDatabases()) {
-			File dbFolder = new File(dumpFolder, database.getName());
-			dbFolder.mkdir();
-			for (TableIndex table : database.getTables()) {
-				File tableFolder = new File(dbFolder, table.getName());
-				tableFolder.mkdir();
-				BitSet records = table.getRecords();
-				for (ColumnIndex columnIndex : table.getColumnIndices()) {
-					File dumpFile = new File(tableFolder, columnIndex.getName() + ".dbd");
-					columnIndex.dumpIndex(dumpFile, records); //todo catch, continue and rethrow?
-				}
+		File dbFolder = new File(dumpFolder, databaseIndex.getName());
+		dbFolder.mkdir();
+		for (TableIndex table : databaseIndex.getTables()) {
+			File tableFolder = new File(dbFolder, table.getName());
+			tableFolder.mkdir();
+			BitSet records = table.getRecords();
+			for (FieldIndex fieldIndex : table.getFieldIndices()) {
+				File dumpFile = new File(tableFolder, fieldIndex.getName() + ".dbd");
+				fieldIndex.dumpIndex(dumpFile, records); //todo catch, continue and rethrow?
 			}
 		}
 	}
-
 
 	private void addRecordUpdateEvent(ResolvedTransactionRecord resolvedRecord, int userId) {
 		if (userId > 0) {
@@ -641,23 +630,21 @@ public class UniversalDB implements DataBaseMapper {
 		}
 	}
 
-	@Override
-	public DatabaseIndex getDatabaseById(int mappingId) {
-		return databaseById.get(mappingId);
-	}
 
-	@Override
 	public TableIndex getTableIndexById(int mappingId) {
 		return tableById.get(mappingId);
 	}
 
-	@Override
-	public ColumnIndex getColumnById(int mappingId) {
+	public FieldIndex getColumnById(int mappingId) {
 		return columnById.get(mappingId);
 	}
 
-	public SchemaIndex getSchemaIndex() {
-		return schemaIndex;
+	public String getName() {
+		return databaseIndex.getName();
+	}
+
+	public DatabaseIndex getDatabaseIndex() {
+		return databaseIndex;
 	}
 
 	public TransactionIndex getTransactionIndex() {
